force-app/main/default/objects/Player__c/fields/Quiz_Average__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Average__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quiz Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>