force-app/main/default/objects/Player__c/fields/Quiz_Taken__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Taken__c</fullName>
    <label>Quiz Taken</label>
    <summaryForeignKey>Attempt__c.Player__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>