force-app/main/default/objects/Player__c/validationRules/Player_Name_Letter_Num.validationRule-meta.xml
<ValidationRule>
    <fullName>Player_Name_Letter_Num</fullName>
    <active>true</active>
    <description>Players cannot use special characters on their names</description>
    <errorConditionFormula>NOT(REGEX( Name,&quot;[a-zA-Z[0-9]._? +-]+&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>&#39;Player Name&#39; Cannot Contain Special Characters!</errorMessage>
</ValidationRule>