force-app/main/default/objects/Player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Team__c</columns>
    <columns>Rank__c</columns>
    <columns>Quiz_Taken__c</columns>
    <columns>Points__c</columns>
    <columns>Quiz_Average__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>